--- a/file-converter.html
+++ b/file-converter.html
@@ -453,6 +453,25 @@
                 </div>
 
                 <div class="converter-card">
+                    <h3 data-i18n="fileConverter.converters.pdfHwp.title">📄 PDF → HWP 변환</h3>
+                    <p data-i18n="fileConverter.converters.pdfHwp.description">PDF 문서를 한글(HWP) 파일로 변환합니다.</p>
+                    <div class="converter-tools">
+                        <a href="https://cloudconvert.com/pdf-to-hwp" class="tool-link recommended" target="_blank">CloudConvert</a>
+                        <a href="https://www.alinpdf.com/pdf-to-hwp" class="tool-link" target="_blank">AlinPDF</a>
+                        <a href="https://convert-helper.com/pdf-to-hwp" class="tool-link" target="_blank">ConvertHelper</a>
+                    </div>
+                    <div class="guide-section">
+                        <h4 data-i18n="fileConverter.conversionMethod">📋 변환 방법</h4>
+                        <ol class="step-list">
+                            <li>변환 사이트 접속 후 PDF 파일 업로드</li>
+                            <li>출력 형식을 HWP로 선택</li>
+                            <li>변환 버튼 클릭 후 완료까지 대기</li>
+                            <li>변환된 HWP 파일 다운로드</li>
+                        </ol>
+                    </div>
+                </div>
+
+                <div class="converter-card">
                     <h3 data-i18n="fileConverter.converters.excelPdf.title">📊 Excel ↔ PDF 변환</h3>
                     <p data-i18n="fileConverter.converters.excelPdf.description">Excel 스프레드시트를 PDF로, 또는 PDF 데이터를 Excel로 추출</p>
                     <div class="converter-tools">
