--- a/file-converter.html
+++ b/file-converter.html
@@ -414,6 +414,7 @@
             <a href="password.html" class="nav-link" data-i18n="common.passwordGenerator">비밀번호 생성기</a>
             <a href="pdf-converter.html" class="nav-link" data-i18n="common.pdfConverter">PDF 변환기</a>
             <a href="file-converter.html" class="nav-link active" data-i18n="common.fileConverter">파일 변환 가이드</a>
+            <a href="pdf-to-hwp.html" class="nav-link">PDF to HWP</a>
         </div>
     </div>
     
