refactor: index.html 네비게이션바 중복 제거 및 순서 재정렬

--- a/password.html
+++ b/password.html
@@ -600,6 +600,7 @@
             <a href="password.html" class="nav-link active" data-i18n="common.passwordGenerator">비밀번호 생성기</a>
             <a href="pdf-converter.html" class="nav-link" data-i18n="common.pdfConverter">PDF 변환기</a>
             <a href="pdf-to-hwp.html" class="nav-link">PDF to HWP</a>
+            <a href="webp-to-jpg.html" class="nav-link">WEBP to JPG</a>
             <a href="file-converter.html" class="nav-link" data-i18n="common.fileConverter">파일 변환 가이드</a>
         </div>
     </div>
