--- a/index.html
+++ b/index.html
@@ -514,6 +514,18 @@
         </select>
     </div>
 
+    <div class="nav-bar">
+        <a href="index.html" class="nav-brand">🛠️ 웹 도구 모음</a>
+        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+        <div class="nav-links" id="navLinks">
+            <a href="password.html" class="nav-link">비밀번호 생성기</a>
+            <a href="pdf-converter.html" class="nav-link">PDF 변환기</a>
+            <a href="pdf-to-hwp.html" class="nav-link">PDF to HWP</a>
+            <a href="webp-to-jpg.html" class="nav-link">WEBP to JPG</a>
+            <a href="file-converter.html" class="nav-link">파일 변환 가이드</a>
+        </div>
+    </div>
+
     
 
     
