--- a/index.html
+++ b/index.html
@@ -565,12 +565,12 @@
 
             <a href="tools/pdf-tools/hwp-converter.html" class="tool-card">
                 <div class="tool-icon">📑</div>
-                <div class="tool-title" data-i18n="home.tools.pdfToHwp.title">📑 PDF to HWP 변환기</div>
-                <div class="tool-description" data-i18n="home.tools.pdfToHwp.description">
-                    PDF 파일을 HWP 파일로 변환하는 방법을 안내합니다.
+                <div class="tool-title" data-i18n="home.tools.hwpToPdf.title">📑 HWP to PDF 변환기</div>
+                <div class="tool-description" data-i18n="home.tools.hwpToPdf.description">
+                    한글(HWP) 파일을 PDF 파일로 변환하세요. 브라우저에서 안전하게 처리됩니다.
                 </div>
                 <ul class="feature-list">
-                    <li>PDF to HWP 변환 가이드</li>
+                    <li>HWP to PDF 변환</li>
                     <li>무료 도구 추천</li>
                     <li>보안 가이드 제공</li>
                 </ul>
