--- a/tools/pdf-tools/index.html
+++ b/tools/pdf-tools/index.html
@@ -32,8 +32,8 @@
             <option value="en" data-i18n="common.languageEn">🇺🇸 EN</option>
         </select>
     </div>
-
     <div id="navbar-placeholder"></div>
+    <script src="../../nav-loader.js"></script>
 
     <div class="main-container">
         <div class="header">
