feat: Implement universal feedback system with multilingual support
- Added feedback.js for a universal feedback system accessible on all pages.
- Integrated EmailJS for feedback submission and notifications.
- Created i18n.js for internationalization, supporting Korean and English languages.
- Developed nav-loader.js to dynamically load navigation based on the current page.
- Added Google and Naver site verification HTML files for SEO purposes.

--- a/tools/image-tools/index.html
+++ b/tools/image-tools/index.html
@@ -190,6 +190,6 @@
             </div>
         </div>
     </div>
-    <script src="../../nav-loader.js"></script>
+    <script src="../../js/utils/nav-loader.js"></script>
 </body>
 </html>
