--- a/tools/password-generator/password.html
+++ b/tools/password-generator/password.html
@@ -605,6 +605,6 @@
             }, 3000);
         }
     </script>
-    <script src="../../nav-loader.js"></script>
+    <script src="../../js/utils/nav-loader.js"></script>
 </body>
 </html>
