--- a/tools/pdf-tools/epub-to-pdf.html
+++ b/tools/pdf-tools/epub-to-pdf.html
@@ -831,6 +831,6 @@
             }
         });
     </script>
-    <script src="../../nav-loader.js"></script>
+    <script src="../../js/utils/nav-loader.js"></script>
 </body>
 </html>
