--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </div>
     </div>
     
-    <script src="nav-loader.js"></script>
+    <script src="js/utils/nav-loader.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
