--- a/tools/file-conversion/file-conversion.html
+++ b/tools/file-conversion/file-conversion.html
@@ -388,6 +388,6 @@
             });
         });
     </script>
-    <script src="../../nav-loader.js"></script>
+    <script src="../../js/utils/nav-loader.js"></script>
 </body>
 </html>
