--- a/tools/image-tools/webp-to-jpg.html
+++ b/tools/image-tools/webp-to-jpg.html
@@ -374,6 +374,6 @@
             }
         }
     </script>
-    <script src="../../nav-loader.js"></script>
+    <script src="../../js/utils/nav-loader.js"></script>
 </body>
 </html>
