--- a/tools/pdf-tools/index.html
+++ b/tools/pdf-tools/index.html
@@ -171,6 +171,6 @@
             </a>
         </div>
     </div>
-    <script src="../../nav-loader.js"></script>
+    <script src="../../js/utils/nav-loader.js"></script>
 </body>
 </html>
