--- a/tools/pdf-tools/pdf-watermark.html
+++ b/tools/pdf-tools/pdf-watermark.html
@@ -1489,6 +1489,6 @@
             }
         });
     </script>
-    <script src="../../nav-loader.js"></script>
+    <script src="../../js/utils/nav-loader.js"></script>
 </body>
 </html>
