--- a/tools/pdf-tools/png-converter.html
+++ b/tools/pdf-tools/png-converter.html
@@ -455,6 +455,6 @@
             fileInput.value = '';
         }
     </script>
-    <script src=\"../../nav-loader.js\"></script>
+    <script src=\"../../js/utils/nav-loader.js\"></script>
 </body>
 </html>
