feat: HTML 파일에 SEO 메타 태그 및 소셜 미디어 메타 태그 추가

--- a/tools/password-generator/password.html
+++ b/tools/password-generator/password.html
@@ -8,11 +8,33 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="안전하고 강력한 비밀번호를 생성하세요">
     <meta name="keywords" content="비밀번호 생성기, 강력한 비밀번호, 보안, 패스워드 생성">
-    
-    <!-- Open Graph -->
+    <meta name="author" content="Web Tools Collection">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/password-generator/password.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/password-generator/password.html">
     <meta property="og:title" content="비밀번호 생성기">
     <meta property="og:description" content="안전하고 강력한 비밀번호를 생성하세요">
-    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/og-image.png">
+    <meta property="og:site_name" content="웹 도구 모음">
+    <meta property="og:locale" content="ko_KR">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/password-generator/password.html">
+    <meta property="twitter:title" content="비밀번호 생성기">
+    <meta property="twitter:description" content="안전하고 강력한 비밀번호를 생성하세요">
+    <meta property="twitter:image" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/og-image.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔑</text></svg>">
+
+    <!-- Language Alternatives -->
+    <link rel="alternate" hreflang="ko" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/password-generator/password.html">
+    <link rel="alternate" hreflang="en" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/en/tools/password-generator/password.html">
+    <link rel="alternate" hreflang="x-default" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/en/tools/password-generator/password.html">
     
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9434360911371069"
