--- a/tools/file-conversion/file-conversion.html
+++ b/tools/file-conversion/file-conversion.html
@@ -8,12 +8,34 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="HWP to Word, Excel to PDF 등 다양한 파일 형식 변환을 위한 무료 온라인 도구 모음과 안전한 변환 가이드">
     <meta name="keywords" content="HWP Word 변환, 파일 변환기, 무료 변환 도구, HWP to DOCX, Excel PDF 변환">
-    
-    <!-- Open Graph -->
+    <meta name="author" content="Web Tools Collection">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/file-conversion/file-conversion.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/file-conversion/file-conversion.html">
     <meta property="og:title" content="파일 변환 도구 모음 - 무료 온라인 변환기 가이드">
     <meta property="og:description" content="HWP, Word, Excel, PowerPoint 등 다양한 파일 형식을 안전하게 변환하는 방법과 도구 모음">
-    <meta property="og:type" content="website">
-    
+    <meta property="og:image" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/og-image.png">
+    <meta property="og:site_name" content="웹 도구 모음">
+    <meta property="og:locale" content="ko_KR">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/file-conversion/file-conversion.html">
+    <meta property="twitter:title" content="파일 변환 도구 모음 - 무료 온라인 변환기 가이드">
+    <meta property="twitter:description" content="HWP, Word, Excel, PowerPoint 등 다양한 파일 형식을 안전하게 변환하는 방법과 도구 모음">
+    <meta property="twitter:image" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/og-image.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔄</text></svg>">
+
+    <!-- Language Alternatives -->
+    <link rel="alternate" hreflang="ko" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/file-conversion/file-conversion.html">
+    <link rel="alternate" hreflang="en" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/en/tools/file-conversion/file-conversion.html">
+    <link rel="alternate" hreflang="x-default" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/en/tools/file-conversion/file-conversion.html">
+
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9434360911371069"
      crossorigin="anonymous"></script>
