--- a/tools/image-tools/index.html
+++ b/tools/image-tools/index.html
@@ -7,8 +7,34 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="이미지 변환 도구 모음. WEBP to JPG, PNG to WEBP, AI 변환기, SVG 변환기, HEIC to JPG 등 다양한 이미지 변환 도구를 제공합니다.">
     <meta name="keywords" content="이미지 변환기, WEBP to JPG, PNG to WEBP, AI 변환기, SVG 변환기, HEIC to JPG, 이미지 도구">
+    <meta name="author" content="Web Tools Collection">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/image-tools/index.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/image-tools/index.html">
+    <meta property="og:title" content="이미지 변환기 모음">
+    <meta property="og:description" content="WEBP to JPG, PNG to WEBP, AI 변환기, SVG 변환기, HEIC to JPG 등 다양한 이미지 변환 도구를 제공합니다.">
+    <meta property="og:image" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/og-image.png">
+    <meta property="og:site_name" content="웹 도구 모음">
+    <meta property="og:locale" content="ko_KR">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/image-tools/index.html">
+    <meta property="twitter:title" content="이미지 변환기 모음">
+    <meta property="twitter:description" content="WEBP to JPG, PNG to WEBP, AI 변환기, SVG 변환기, HEIC to JPG 등 다양한 이미지 변환 도구를 제공합니다.">
+    <meta property="twitter:image" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/og-image.png">
+
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🖼️</text></svg>">
+
+    <!-- Language Alternatives -->
+    <link rel="alternate" hreflang="ko" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/image-tools/index.html">
+    <link rel="alternate" hreflang="en" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/en/tools/image-tools/index.html">
+    <link rel="alternate" hreflang="x-default" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/en/tools/image-tools/index.html">
+
     <link rel="stylesheet" href="../../layout/layout.css">
     <link rel="stylesheet" href="../../layout/nav.css">
     <link rel="stylesheet" href="./image-tools.css">
