--- a/tools/pdf-tools/hwp-converter.html
+++ b/tools/pdf-tools/hwp-converter.html
@@ -7,10 +7,34 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="HWP 파일을 PDF 파일로 변환하세요">
     <meta name="keywords" content="HWP PDF 변환, HWP PDF 변환, 온라인 HWP 변환기">
-    <!-- Open Graph -->
+    <meta name="author" content="Web Tools Collection">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/pdf-tools/hwp-converter.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/pdf-tools/hwp-converter.html">
     <meta property="og:title" content="HWP to PDF 변환기">
     <meta property="og:description" content="HWP 파일을 PDF 파일로 변환하세요">
-    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/og-image.png">
+    <meta property="og:site_name" content="웹 도구 모음">
+    <meta property="og:locale" content="ko_KR">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/pdf-tools/hwp-converter.html">
+    <meta property="twitter:title" content="HWP to PDF 변환기">
+    <meta property="twitter:description" content="HWP 파일을 PDF 파일로 변환하세요">
+    <meta property="twitter:image" content="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/og-image.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📑</text></svg>">
+
+    <!-- Language Alternatives -->
+    <link rel="alternate" hreflang="ko" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/tools/pdf-tools/hwp-converter.html">
+    <link rel="alternate" hreflang="en" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/en/tools/pdf-tools/hwp-converter.html">
+    <link rel="alternate" hreflang="x-default" href="https://web-tools-collection-git-main-seo-junghwas-projects.vercel.app/en/tools/pdf-tools/hwp-converter.html">
+
     <link rel="stylesheet" href="../../layout/layout.css">
     <link rel="stylesheet" href="../../layout/nav.css">
     <link rel="stylesheet" href="./pdf-tools.css">
