--- a/tools/password-generator/password.html
+++ b/tools/password-generator/password.html
@@ -57,6 +57,28 @@
     <link rel="stylesheet" href="../../layout/layout.css">
     <link rel="stylesheet" href="../../layout/nav.css">
     <link rel="stylesheet" href="./password.css">
+    <style>
+        .language-switcher {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+        }
+        .language-switcher select {
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 5px;
+            color: white;
+            padding: 8px 12px;
+            font-size: 14px;
+            width: 90px;
+            text-align: center;
+        }
+        .language-switcher option {
+            background: #222b36;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div class="language-switcher">
