feat: 피드백 스크립트 로딩 기능 추가 및 i18n 시스템 스크립트 경로 수정

--- a/tools/pdf-tools/index.html
+++ b/tools/pdf-tools/index.html
@@ -130,8 +130,7 @@
             </div>
         </div>
     </div>
-    <script src="../../js/utils/feedback.js"></script>
-    <script src="../../js/utils/nav-loader.js"></script>
+    <!-- i18n System -->
     <script src="../../js/utils/i18n.js"></script>
 </body>
 </html>
