--- a/tools/image-tools/index.html
+++ b/tools/image-tools/index.html
@@ -153,5 +153,6 @@
     </div>
     <!-- i18n System -->
     <script src="../../js/utils/i18n.js"></script>
+    <script src="../../js/utils/nav-loader.js"></script>
 </body>
 </html>
