--- a/tools/pdf-tools/index.html
+++ b/tools/pdf-tools/index.html
@@ -132,5 +132,6 @@
     </div>
     <!-- i18n System -->
     <script src="../../js/utils/i18n.js"></script>
+    <script src="../../js/utils/nav-loader.js"></script>
 </body>
 </html>
